--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -5,5 +5,7 @@ packages:
       engine: "postgresql"
       schema: "./db/migration/"
       queries: "./db/query/"
-      emit_json_tags: true
       json_tags_case_style: "snake"
+      emit_json_tags: true
+      emit_empty_slices: true
+      emit_interface: true
