--- a/app.env
+++ b/app.env
@@ -1,3 +1,4 @@
+GO_ENV=development
 DB_DRIVER=postgres
 DB_SOURCE=postgresql://root:secret@localhost:5432/simple_bank?sslmode=disable
 HTTP_SERVER_ADDRESS=0.0.0.0:8080
